--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "version": "0.3.2",
   "license": "MIT",
   "repository": "fusionjs/fusion-rpc-redux",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "main": "./dist/node.cjs.js",
   "module": "./dist/node.es.js",
   "browser": {
@@ -30,6 +32,7 @@
     "eslint-plugin-flowtype": "^2.35.0",
     "eslint-plugin-prettier": "^2.1.2",
     "eslint-plugin-react": "^7.1.0",
+    "flow-bin": "^0.59.0",
     "prettier": "1.4.2",
     "tape-cup": "^4.7.1",
     "unitest": "^1.0.0"
@@ -39,8 +42,7 @@
     "lint": "eslint . --ignore-path .gitignore",
     "transpile": "npm run clean && cup build",
     "build-test": "rm -rf dist-tests && cup build-tests",
-    "just-test":
-      "node_modules/.bin/unitest --browser=dist-tests/browser.js --node=dist-tests/node.js",
+    "just-test": "node_modules/.bin/unitest --browser=dist-tests/browser.js --node=dist-tests/node.js",
     "test": "npm run build-test && npm run just-test",
     "prepublish": "npm run transpile"
   },
