--- a/package.json
+++ b/package.json
@@ -42,8 +42,9 @@
     "eslint-plugin-flowtype": "^2.39.1",
     "eslint-plugin-prettier": "^2.3.1",
     "eslint-plugin-react": "^7.4.0",
-    "fusion-react": "^0.1.9",
+    "flow-bin": "^0.59.0",
     "fusion-core": "^0.2.3",
+    "fusion-react": "^0.1.9",
     "fusion-react-async": "0.1.4",
     "prettier": "1.8.2",
     "react": "^16.1.1",
