--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-prettier": "^2.1.2",
     "eslint-plugin-react": "^7.1.0",
     "flow-bin": "^0.59.0",
+    "nyc": "^11.3.0",
     "prettier": "1.4.2",
     "tape-cup": "^4.7.1",
     "unitest": "^1.0.0"
