--- a/package.json
+++ b/package.json
@@ -5,19 +5,21 @@
   "license": "MIT",
   "repository": "fusionjs/fusion-rpc-redux",
   "files": [
-    "dist"
+    "dist",
+    "src"
   ],
-  "main": "./dist/node.cjs.js",
-  "module": "./dist/node.es.js",
+  "main": "./dist/index.js",
+  "module": "./dist/index.es.js",
   "browser": {
-    "./dist/node.cjs.js": "./dist/browser.cjs.js",
-    "./dist/node.es.js": "./dist/browser.es.js"
+    "./dist/index.js": "./dist/browser.es5.js",
+    "./dist/index.es.js": "./dist/browser.es5.es.js"
   },
   "es2015": {
-    "./dist/node.cjs.js": "./dist/node.cjs.es2015.js",
-    "./dist/node.es.js": "./dist/node.es.es2015.js",
-    "./dist/browser.cjs.js": "./dist/browser.cjs.es2015.js",
-    "./dist/browser.es.js": "./dist/browser.es.es2015.js"
+    "./dist/browser.es5.es.js": "./dist/browser.es2015.es.js"
+  },
+  "es2017": {
+    "./dist/browser.es5.es.js": "./dist/browser.es2017.es.js",
+    "./dist/browser.es2015.es.js": "./dist/browser.es2017.es.js"
   },
   "dependencies": {
     "redux-reactors": "^1.0.3"
@@ -25,7 +27,7 @@
   "devDependencies": {
     "babel-eslint": "^8.0.0",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
-    "create-universal-package": "^1.0.0-rc.14",
+    "create-universal-package": "^3.2.4",
     "eslint": "^4.2.0",
     "eslint-config-fusion": "^0.1.2",
     "eslint-plugin-cup": "^1.0.0-rc.4",
