Fix tree shaking (#46)
https://github.com/fusionjs/fusion-plugin-rpc-redux-react/pull/46

--- a/package.json
+++ b/package.json
@@ -33,23 +33,24 @@
     "react": "14.x - 16.x"
   },
   "devDependencies": {
-    "babel-eslint": "^8.0.3",
+    "babel-eslint": "^8.2.1",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
-    "create-universal-package": "^3.2.4",
-    "eslint": "^4.12.1",
-    "eslint-config-fusion": "^0.1.2",
+    "create-universal-package": "^3.3.0",
+    "eslint": "^4.16.0",
+    "eslint-config-fusion": "^0.2.1",
     "eslint-plugin-cup": "^1.0.0",
-    "eslint-plugin-flowtype": "^2.39.1",
-    "eslint-plugin-prettier": "^2.3.1",
-    "eslint-plugin-react": "^7.5.1",
+    "eslint-plugin-flowtype": "^2.42.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-prettier": "^2.5.0",
+    "eslint-plugin-react": "^7.6.0",
     "flow-bin": "^0.64.0",
     "fusion-core": "0.3.0-5",
     "fusion-plugin-universal-events": "0.3.0",
     "fusion-react": "0.4.1",
     "fusion-react-async": "0.1.4",
-    "fusion-test-utils": "^0.4.0",
+    "fusion-test-utils": "^0.4.2",
     "fusion-tokens": "0.0.5",
-    "nyc": "^11.3.0",
+    "nyc": "^11.4.1",
     "prettier": "1.10.2",
     "react": "^16.2.0",
     "react-dom": "16.2.0",
