--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fusion-rpc-redux",
   "description": "Triggers Redux actions when RPC methods are called",
-  "version": "0.3.6",
+  "version": "1.0.0",
   "license": "MIT",
   "repository": "fusionjs/fusion-rpc-redux",
   "files": [
@@ -29,7 +29,7 @@
     "babel-plugin-transform-flow-strip-types": "6.22.0",
     "create-universal-package": "3.4.0",
     "eslint": "4.17.0",
-    "eslint-config-fusion": "0.1.2",
+    "eslint-config-fusion": "^1.0.0",
     "eslint-plugin-cup": "1.0.0",
     "eslint-plugin-flowtype": "2.42.0",
     "eslint-plugin-prettier": "2.6.0",
