--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
     "babel-plugin-transform-flow-strip-types": "6.22.0",
     "create-universal-package": "3.4.0",
     "eslint": "4.17.0",
-    "eslint-config-fusion": "0.1.2",
+    "eslint-config-fusion": "^1.0.0",
     "eslint-plugin-cup": "1.0.0",
     "eslint-plugin-flowtype": "2.42.0",
+    "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-prettier": "2.6.0",
     "eslint-plugin-react": "7.6.1",
     "flow-bin": "0.65.0",
