--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "version": "0.3.3",
   "license": "MIT",
   "repository": "fusionjs/fusion-plugin-rpc-redux-react",
-  "files": ["dist", "src"],
+  "files": [
+    "dist",
+    "src"
+  ],
   "main": "./dist/index.js",
   "module": "./dist/index.es.js",
   "browser": {
@@ -19,13 +22,13 @@
     "./dist/browser.es2015.es.js": "./dist/browser.es2017.es.js"
   },
   "dependencies": {
-    "fusion-plugin-rpc": "^0.6.3",
-    "fusion-rpc-redux": "^0.3.6"
+    "fusion-plugin-rpc": "^1.0.0",
+    "fusion-rpc-redux": "^1.0.0"
   },
   "peerDependencies": {
-    "fusion-core": "0.3.6",
-    "fusion-react": "0.4.3",
-    "fusion-tokens": "0.0.6",
+    "fusion-core": "^1.0.0",
+    "fusion-react": "^1.0.0",
+    "fusion-tokens": "^1.0.0",
     "prop-types": "^15.6.0",
     "react": "14.x - 16.x"
   },
@@ -34,19 +37,19 @@
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "create-universal-package": "^3.4.0",
     "eslint": "^4.17.0",
-    "eslint-config-fusion": "^0.2.1",
+    "eslint-config-fusion": "^1.0.0",
     "eslint-plugin-cup": "^1.0.0",
     "eslint-plugin-flowtype": "^2.42.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.6.1",
     "flow-bin": "^0.65.0",
-    "fusion-core": "0.3.6",
-    "fusion-plugin-universal-events": "0.3.4",
-    "fusion-react": "0.4.3",
-    "fusion-react-async": "0.2.0",
-    "fusion-test-utils": "^0.4.2",
-    "fusion-tokens": "0.0.6",
+    "fusion-core": "^1.0.0",
+    "fusion-plugin-universal-events": "^1.0.0",
+    "fusion-react": "^1.0.0",
+    "fusion-react-async": "^1.0.0",
+    "fusion-test-utils": "^1.0.0",
+    "fusion-tokens": "^1.0.0",
     "nyc": "^11.4.1",
     "prettier": "1.10.2",
     "prop-types": "^15.6.0",
@@ -64,8 +67,7 @@
     "lint": "eslint . --ignore-path .gitignore",
     "transpile": "npm run clean && cup build",
     "build-test": "rm -rf dist-tests && cup build-tests",
-    "just-test":
-      "node_modules/.bin/unitest --browser=dist-tests/browser.js --node=dist-tests/node.js",
+    "just-test": "node_modules/.bin/unitest --browser=dist-tests/browser.js --node=dist-tests/node.js",
     "test": "npm run build-test && npm run just-test",
     "cover": "npm run build-test && nyc npm run just-test",
     "prepublish": "npm run transpile"
