--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
   "name": "fusion-plugin-rpc-redux-react",
   "description": "Triggers Redux actions when RPC methods are called.",
-  "version": "1.0.4",
+  "version": "1.1.0",
   "license": "MIT",
   "repository": "fusionjs/fusion-plugin-rpc-redux-react",
-  "files": [
-    "dist",
-    "src"
-  ],
+  "files": ["dist", "src"],
   "main": "./dist/index.js",
   "module": "./dist/index.es.js",
   "browser": {
@@ -67,7 +64,8 @@
     "lint": "eslint . --ignore-path .gitignore",
     "transpile": "npm run clean && cup build",
     "build-test": "rm -rf dist-tests && cup build-tests",
-    "just-test": "node_modules/.bin/unitest --browser=dist-tests/browser.js --node=dist-tests/node.js",
+    "just-test":
+      "node_modules/.bin/unitest --browser=dist-tests/browser.js --node=dist-tests/node.js",
     "test": "npm run build-test && npm run just-test",
     "cover": "npm run build-test && nyc npm run just-test",
     "prepublish": "npm run transpile"
