--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "version": "1.1.0",
   "license": "MIT",
   "repository": "fusionjs/fusion-plugin-rpc-redux-react",
-  "files": ["dist", "src"],
+  "files": [
+    "dist",
+    "src"
+  ],
   "main": "./dist/index.js",
   "module": "./dist/index.es.js",
   "browser": {
@@ -23,38 +26,38 @@
     "fusion-rpc-redux": "^1.0.2"
   },
   "peerDependencies": {
-    "fusion-core": "^1.0.2",
-    "fusion-react": "^1.0.2",
-    "fusion-tokens": "^1.0.1",
-    "prop-types": "^15.6.0",
+    "fusion-core": "^1.2.6",
+    "fusion-react": "^1.0.4",
+    "fusion-tokens": "^1.0.3",
+    "prop-types": "^15.6.1",
     "react": "14.x - 16.x"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.2",
+    "babel-eslint": "^8.2.3",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
-    "create-universal-package": "^3.4.0",
-    "eslint": "^4.18.1",
-    "eslint-config-fusion": "^1.0.0",
+    "create-universal-package": "^3.4.1",
+    "eslint": "^4.19.1",
+    "eslint-config-fusion": "^1.0.1",
     "eslint-plugin-cup": "^1.0.0",
-    "eslint-plugin-flowtype": "^2.45.0",
-    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-flowtype": "^2.46.3",
+    "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.7.0",
-    "flow-bin": "^0.69.0",
-    "fusion-core": "^1.0.2",
-    "fusion-plugin-universal-events": "^1.0.2",
-    "fusion-react": "^1.0.2",
-    "fusion-react-async": "^1.0.2",
-    "fusion-test-utils": "^1.0.1",
-    "fusion-tokens": "^1.0.1",
-    "nyc": "^11.4.1",
+    "flow-bin": "^0.71.0",
+    "fusion-core": "^1.2.6",
+    "fusion-plugin-universal-events": "^1.0.3",
+    "fusion-react": "^1.0.4",
+    "fusion-react-async": "^1.2.2",
+    "fusion-test-utils": "^1.0.5",
+    "fusion-tokens": "^1.0.3",
+    "nyc": "^11.7.1",
     "prettier": "1.12.1",
-    "prop-types": "^15.6.0",
-    "react": "^16.2.0",
-    "react-dom": "16.2.0",
+    "prop-types": "^15.6.1",
+    "react": "^16.3.2",
+    "react-dom": "16.3.2",
     "react-redux": "^5.0.7",
-    "react-test-renderer": "^16.2.0",
-    "redux": "^3.7.2",
+    "react-test-renderer": "^16.3.2",
+    "redux": "4.0.0",
     "redux-reactors": "^1.0.3",
     "tape-cup": "^4.7.1",
     "unitest": "^2.1.1"
@@ -64,8 +67,7 @@
     "lint": "eslint . --ignore-path .gitignore",
     "transpile": "npm run clean && cup build",
     "build-test": "rm -rf dist-tests && cup build-tests",
-    "just-test":
-      "node_modules/.bin/unitest --browser=dist-tests/browser.js --node=dist-tests/node.js",
+    "just-test": "node_modules/.bin/unitest --browser=dist-tests/browser.js --node=dist-tests/node.js",
     "test": "npm run build-test && npm run just-test",
     "cover": "npm run build-test && nyc npm run just-test",
     "prepublish": "npm run transpile"
