--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "version": "1.1.0",
   "license": "MIT",
   "repository": "fusionjs/fusion-rpc-redux",
-  "files": ["dist", "src"],
+  "files": [
+    "dist",
+    "src"
+  ],
   "main": "./dist/index.js",
   "module": "./dist/index.es.js",
   "browser": {
@@ -22,29 +25,32 @@
     "redux-reactors": "^1.0.3"
   },
   "devDependencies": {
-    "babel-eslint": "8.2.3",
+    "babel-eslint": "^8.2.3",
     "babel-plugin-transform-flow-strip-types": "6.22.0",
-    "create-universal-package": "3.4.4",
+    "create-universal-package": "^3.4.4",
     "eslint": "4.19.1",
-    "eslint-config-fusion": "^1.0.0",
-    "eslint-plugin-cup": "1.0.2",
-    "eslint-plugin-flowtype": "2.46.3",
-    "eslint-plugin-import": "^2.8.0",
+    "eslint-config-fusion": "^1.0.1",
+    "eslint-plugin-cup": "^1.0.2",
+    "eslint-plugin-flowtype": "^2.46.3",
+    "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-prettier": "2.6.0",
     "eslint-plugin-react": "7.7.0",
-    "flow-bin": "0.72.0",
-    "nyc": "11.4.1",
-    "prettier": "1.11.1",
+    "flow-bin": "^0.72.0",
+    "nyc": "^11.7.3",
+    "prettier": "^1.12.1",
+    "redux": "^4.0.0",
     "tape-cup": "4.7.1",
     "unitest": "2.1.1"
+  },
+  "peerDependencies": {
+    "redux": ">=3.7.2"
   },
   "scripts": {
     "clean": "rm -rf dist",
     "lint": "eslint . --ignore-path .gitignore",
     "transpile": "npm run clean && cup build",
     "build-test": "rm -rf dist-tests && cup build-tests",
-    "just-test":
-      "node_modules/.bin/unitest --browser=dist-tests/browser.js --node=dist-tests/node.js",
+    "just-test": "node_modules/.bin/unitest --browser=dist-tests/browser.js --node=dist-tests/node.js",
     "test": "npm run build-test && npm run just-test",
     "prepublish": "npm run transpile"
   },
