--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-prettier": "2.6.2",
     "eslint-plugin-react": "7.10.0",
+    "execa": "^0.10.0",
     "flow-bin": "^0.76.0",
     "nyc": "^11.7.3",
     "prettier": "^1.12.1",
