--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-cup": "^1.0.2",
     "eslint-plugin-flowtype": "^2.46.3",
     "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-jest": "^21.18.0",
     "eslint-plugin-prettier": "2.6.2",
     "eslint-plugin-react": "7.10.0",
     "execa": "^0.10.0",
