--- a/package.json
+++ b/package.json
@@ -23,41 +23,41 @@
     "./dist/browser.es2015.es.js": "./dist/browser.es2017.es.js"
   },
   "dependencies": {
-    "fusion-plugin-rpc": "^2.1.3",
+    "fusion-plugin-rpc": "^2.3.0-0",
     "fusion-rpc-redux": "^1.2.0",
     "prop-types": "^15.6.1"
   },
   "peerDependencies": {
     "fusion-core": "^1.2.6",
-    "fusion-react": "^1.1.0",
+    "fusion-react": "^1.3.4-0",
     "react": "14.x - 16.x"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "create-universal-package": "^3.4.6",
-    "eslint": "^5.6.1",
+    "eslint": "^5.9.0",
     "eslint-config-fusion": "^4.0.0",
     "eslint-plugin-cup": "^2.0.0",
-    "eslint-plugin-flowtype": "^2.50.3",
+    "eslint-plugin-flowtype": "^3.2.0",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jest": "^21.24.1",
+    "eslint-plugin-jest": "^22.0.0",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
-    "flow-bin": "^0.83.0",
-    "fusion-core": "^1.7.0",
-    "fusion-plugin-universal-events": "^1.2.0",
-    "fusion-react": "^1.3.0",
-    "fusion-test-utils": "^1.2.3",
-    "fusion-tokens": "^1.1.0",
-    "nyc": "^13.0.1",
-    "prettier": "1.14.3",
+    "flow-bin": "^0.86.0",
+    "fusion-core": "^1.10.0",
+    "fusion-plugin-universal-events": "^1.3.0",
+    "fusion-react": "^1.3.4-0",
+    "fusion-test-utils": "^1.2.4",
+    "fusion-tokens": "^1.1.1",
+    "nyc": "^13.1.0",
+    "prettier": "1.15.2",
     "prop-types": "^15.6.1",
-    "react": "^16.5.2",
-    "react-dom": "16.6.0",
-    "react-redux": "^5.0.7",
-    "react-test-renderer": "^16.5.2",
-    "redux": "4.0.0",
+    "react": "^16.6.3",
+    "react-dom": "16.6.3",
+    "react-redux": "^5.1.1",
+    "react-test-renderer": "^16.6.3",
+    "redux": "4.0.1",
     "redux-reactors": "^1.0.3",
     "tape-cup": "^4.7.1",
     "unitest": "^2.1.1"
