--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "./dist/browser.es2015.es.js": "./dist/browser.es2017.es.js"
   },
   "dependencies": {
-    "fusion-plugin-rpc": "^2.3.0-0",
-    "fusion-rpc-redux": "^1.2.0",
+    "fusion-plugin-rpc": "^2.3.0",
+    "fusion-rpc-redux": "^1.3.0",
     "prop-types": "^15.6.1"
   },
   "peerDependencies": {
@@ -41,14 +41,14 @@
     "eslint-plugin-cup": "^2.0.0",
     "eslint-plugin-flowtype": "^3.2.0",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jest": "^22.0.0",
+    "eslint-plugin-jest": "^22.1.0",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
-    "flow-bin": "^0.86.0",
+    "flow-bin": "^0.87.0",
     "fusion-core": "^1.10.0",
     "fusion-plugin-universal-events": "^1.3.0",
-    "fusion-react": "^1.3.4-0",
-    "fusion-test-utils": "^1.2.4",
+    "fusion-react": "^1.3.4",
+    "fusion-test-utils": "^1.3.0",
     "fusion-tokens": "^1.1.1",
     "nyc": "^13.1.0",
     "prettier": "1.15.2",
