--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fusion-plugin-rpc-redux-react",
   "description": "Triggers Redux actions when RPC methods are called.",
-  "version": "2.0.5-0",
+  "version": "2.0.5",
   "license": "MIT",
   "repository": "fusionjs/fusion-plugin-rpc-redux-react",
   "files": [
